--- a/app/templates/timesheet.html
+++ b/app/templates/timesheet.html
@@ -1,48 +1,102 @@
+{% extends "appbuilder/base.html" %}
+{% block content %}
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
+<script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table-vue.min.js"></script>
+<p>App {{ param1 }} </p>
 
-<template>
-    <div id="app">
-      <img alt="Vue logo" src="./assets/logo.png">
-      <HelloWorld msg="Welcome to Your Vue.js App"/>
-    </div>
-  </template>
+<div id="app">
   
-  <script>
-  import HelloWorld from './components/HelloWorld.vue'
+  <ul id="example-1">
+    <li v-for="(a,b) in message">
+      [[b]] -> [[a]]
+    </li>
+  </ul>
+
+  <p>projects</p>
+  <ul id="projects-1">
+    <li v-for="item in projects.result">
+      [[item.id]]. [[item.ts_date]] -> [[item.total_bill_time]]
+    </li>
+  </ul>
+
+
+
+  <h1>[[projects.modelview_name]]</h1>
   
-  export default {
-    name: 'App',
-    components: {
-      HelloWorld
+  <bootstrap-table :columns="labels" :data="projects.result" :options="options"></bootstrap-table>
+
+</div>
+<script>
+
+
+var app = new Vue({
+  el: '#app',
+  components: {
+        'BootstrapTable': BootstrapTable
+      },
+  data () {
+    return {
+    message: 'Hello Vue!',
+    projects: '',
+    labels: new Array(),
+    errored: false,
+    options: {
+          search: true,
+          showColumns: true
+        },
+    loading: true
     }
-  }
-  </script>
+  },
+  delimiters: ['[[',']]'],
+  mounted () {
+    axios
+      .get('/appview/ts2/') 
+      .then(response => {
+        this.message = response.data
+
+      })
+      .catch(error => {
+        console.log(error)
+        this.errored = true
+      })
+      .finally(() => this.loading = false),
+    
+      axios
+      .get('/timesheetview/api/read') 
+      .then(response => {
+        this.projects = response.data
+        var labels = new Array();
+        response.data.list_columns.forEach((element,index) => {
+          labels[index]= {title:response.data.label_columns[element], field:element}
+          
+        });
+        labels.push({
+            field: 'action',
+            title: 'Actions',
+            align: 'center',
+            formatter: function () {
+              return '<a href="javascript:" class="like"><i class="fa fa-star"></i></a>'
+            },
+            events: {
+              'click .like': function (e, value, row) {
+                alert(JSON.stringify(row))
+              }
+            }
+          })
+        this.labels = labels
+        
+      })
+      .catch(error => {
+        console.log(error)
+        this.errored = true
+      })
+      .finally(() => this.loading = false)
   
-  <style>
-  #app {
-    font-family: Avenir, Helvetica, Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    color: #2c3e50;
-    margin-top: 60px;
-  }
-  </style>
+    }
+  })
+</script>
+{% endblock %}
